page is now accessible on mobile

--- a/index.html
+++ b/index.html
@@ -22,217 +22,166 @@
 </head>
 
 <body>
-    <!-- Nav Bar -->
-    <header>
-        <ul class="nav">
-            <li class="nav-item active" id='home'>
-                <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item" id='about'>
-                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
-            </li>
-            <li class="nav-item" id='skills'>
-                <a class="nav-link" href="#">Skills</a>
-            </li>
-            <li class="nav-item" id='projects'>
-                <a class="nav-link" href="#">Projects</a>
-            </li>
-            <li class="nav-item" id='contact'>
-                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
-            </li>
-        </ul>
-    </header>
-    <!-- Greeting -->
-    <div class="greeting">
-        <h1 class="greet-hello">Hi, I'm Minhazur Rahaman
-            <h3 class="greet-position">Full Stack Developer</h3>
-        </h1>
-    </div>
-    <!-- About -->
-    <div class="about-container">
-        <div class="about">
-            <h2 class="about-name">
-                About
-            </h2>
-            <p class="about-desc">My name is Minhazur Rahaman. I’m a full stack developer with experience in working in
-                the
-                front end and in the back end including JS and Python. I am dedicated to my work in creating reliable,
-                and
-                useful applications for consumers so my approach is taking the extra time to work on solving logical
-                issues
-                or breaking down large problems to find solutions so the program runs smoothly on the client side.
-            </p>
-            <h3>Resume: <a id="resume" href="./files/Minhazur_Rahaman_Resume.pdf" target="_blank">My Resume</a></h3>
+    <div class="mobile">
+        <!-- Nav Bar -->
+        <header>
+            <ul class="nav">
+                <li class="nav-item active" id='home'>
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item" id='about'>
+                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
+                </li>
+                <li class="nav-item" id='skills'>
+                    <a class="nav-link" href="#">Skills</a>
+                </li>
+                <li class="nav-item" id='projects'>
+                    <a class="nav-link" href="#">Projects</a>
+                </li>
+                <li class="nav-item" id='contact'>
+                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+                </li>
+            </ul>
+        </header>
+        <!-- Greeting -->
+        <div class="greeting">
+            <h1 class="greet-hello">Hi, I'm Minhazur Rahaman
+                <h3 class="greet-position">Full Stack Developer</h3>
+            </h1>
         </div>
-    </div>
-    <!-- Skills -->
-    <div class="skills-container">
-        <div class="skills">
-            <h2 class="skills-title">Skills</h2>
-            <div class="skills-grid">
-                <div class="languages">
-                    <h4>Languages</h4>
-                    <p class="skill">JavaScript</p>
-                    <p class="skill">Python</p>
-                    <p class="skill">HTML</p>
-                    <p class="skill">CSS</p>
-                    <p class="skill">Java</p>
-                    <p class="skill">C++</p>
-                </div>
-                <div class="frameworks">
-                    <h4 class="frameworks-title">Libraries & Frameworks</h4>
-                    <p></p>
-                    <p class="skill">React.js</p>
-                    <p class="skill">jQuery.js</p>
-                    <p class="skill">Django</p>
-                    <p class="skill">Node.js</p>
-                    <p class="skill">GraphQL</p>
-                    <p class="skill">Apollo</p>
-                    <p class="skill">Bootstrap.css</p>
-                    <p class="skill">Materialize.css</p>
-                    <p class="skill">MongoDB</p>
-                    <p class="skill">PostgresSQL</p>
-                </div>
+        <!-- About -->
+        <div class="about-container">
+            <div class="about">
+                <h2 class="about-name">
+                    About
+                </h2>
+                <p class="about-desc">My name is Minhazur Rahaman. I’m a full stack developer with experience in working
+                    in
+                    the
+                    front end and in the back end including JS and Python. I am dedicated to my work in creating
+                    reliable,
+                    and
+                    useful applications for consumers so my approach is taking the extra time to work on solving logical
+                    issues
+                    or breaking down large problems to find solutions so the program runs smoothly on the client side.
+                </p>
+                <h3>Resume: <a id="resume" href="./files/Minhazur_Rahaman_Resume.pdf" target="_blank">My Resume</a></h3>
             </div>
-            
-            <!-- <div class="row">
-                <div class="col">
-                    <h4>Languages</h4>
-                </div>
-                <div class="col">
-                    <h4>Libaries & Frameworks</h4>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    Python
-                </div>
-                <div class="col">
-                    Django<span style="padding:90px">Materialize.css</span>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    JavaScript
-                </div>
-                <div class="col">
-                    React.js<span style="padding:82px">jQuery</span>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    HTML
-                </div>
-                <div class="col">
-                    MongoDB<span style="padding:70px">Bootstrap.css</span>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    CSS
-                </div>
-                <div class="col">
-                    Express.js<span style="padding:68px">GraphQL</span>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    Java
-                </div>
-                <div class="col">
-                    PostgresSQL<span style="padding:47px">Apollo</span>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    C++
-                </div>
-                <div class="col">
-                    Node.js
-                </div>
-            </div> -->
         </div>
-    </div>
+        <!-- Skills -->
+        <div class="skills-container">
+            <div class="skills">
+                <h2 class="skills-title">Skills</h2>
+                <div class="skills-grid">
+                    <div class="languages">
+                        <h4>Languages</h4>
+                        <p class="skill">JavaScript</p>
+                        <p class="skill">Python</p>
+                        <p class="skill">HTML</p>
+                        <p class="skill">CSS</p>
+                        <p class="skill">Java</p>
+                        <p class="skill">C++</p>
+                    </div>
+                    <div class="frameworks">
+                        <h4 class="frameworks-title">Libraries & Frameworks</h4>
+                        <p></p>
+                        <p class="skill">React.js</p>
+                        <p class="skill">jQuery.js</p>
+                        <p class="skill">Django</p>
+                        <p class="skill">Node.js</p>
+                        <p class="skill">GraphQL</p>
+                        <p class="skill">Apollo</p>
+                        <p class="skill">Bootstrap.css</p>
+                        <p class="skill">Materialize.css</p>
+                        <p class="skill">MongoDB</p>
+                        <p class="skill">PostgresSQL</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <!-- Projects -->
-    <div class="projects">
-        <h2 class="projects-title">Projects</h2>
-        <ul class='projects-list'>
-            <h3 class="projects-list-item">
-                <p class="project-name">Premier</p>
-                <p class="projects-desc">A fullstack application created by myself that allows people to look and
-                    research popular or top rated movies and tv shows, having the ability to make an account to make
-                    reviews on the movie/shows and post their own ratings to affect the average user score for others to
-                    see and read. You can also make your own list of recommendations of movies/shows and have them show
-                    up on your public profile. <br><br>
-                    Technologies used: <strong>Javascript, React.js, Python, Django, PostgresSQL, CSS, HTML,
-                        Materialize.css, DjangoRESTFramework, JWT Auth</strong></br>
-                    Live: <a href="https://premier-min.herokuapp.com/" class="live-link">Premier</a><br>
-                    Github <a class="live-link" href="https://github.com/minhazur9/premier">Link</a><br><br>
-                    Use this Login Info:</strong><br>username: guest <br>password: guest<br>
-                </p>
-                <img src="./styles/images/Premier.PNG" alt="Premier" class="projects-picture">
-            </h3>
-            <h3 class="projects-list-item">
-                <p class="project-name">Wayfarer</p>
-                <p class="projects-desc">A fullstack social media like application created by myself and three other
-                    developers
-                    in a week that allows users to create an account and post pictures of the sights and landmarks of
-                    the cities
-                    that they have traveled to share it with the world, and to also comment on other peoples posts.
-                    <br><br>
-                    Technologies used: <strong>Javascript, Python, Django, Jquery, PostgresSQL, CSS, HTML,
-                        Materialize.css</strong></br>
-                    Live: <a href="https://wayfarer-min.herokuapp.com/" class="live-link">Wayfarer</a><br>
-                    Github <a class="live-link" href="https://github.com/minhazur9/wayfarer">Link</a><br><br>
-                    Use this Login Info:</strong><br>email: guest123 <br>password: accountpass<br>
-                </p>
-                <img src="./styles/images/Wayfarer.PNG" alt="Wayfarer" class="projects-picture">
-            </h3>
-            <h3 class="projects-list-item">
-                <p class="project-name">MusicScape</p>
-                <p class="projects-desc">A fullstack application created by myself and another developer in a week that
-                    allows users to create playlists and add songs to them which automatically includes embedded music
-                    videos by using Genius API. A user can view other peoples playlists and songs and also create their
-                    own playlists by creating an account.<br><br>
-                    Technologies used: <strong>JavaScript, Jquery, HTML, CSS, Express.js, Bcrypt, MongoDB, and Genius
-                        API</strong><br>
-                    Live: <a href="https://fierce-bastion-27114.herokuapp.com/" class="live-link">MusicScape</a><br>
-                    Github <a class="live-link" href="https://github.com/minhazur9/MusicScape">Link</a><br><br>
-                    Use this Login Info:</strong><br>email: guest@gmail.com <br>password: guest<br>
+        <!-- Projects -->
+        <div class="projects">
+            <h2 class="projects-title">Projects</h2>
+            <ul class='projects-list'>
+                <h3 class="projects-list-item">
+                    <p class="project-name">Premier</p>
+                    <p class="projects-desc">A fullstack application created by myself that allows people to look and
+                        research popular or top rated movies and tv shows, having the ability to make an account to make
+                        reviews on the movie/shows and post their own ratings to affect the average user score for
+                        others to
+                        see and read. You can also make your own list of recommendations of movies/shows and have them
+                        show
+                        up on your public profile. <br><br>
+                        Technologies used: <strong>Javascript, React.js, Python, Django, PostgresSQL, CSS, HTML,
+                            Materialize.css, DjangoRESTFramework, JWT Auth</strong></br>
+                        Live: <a href="https://premier-min.herokuapp.com/" class="live-link">Premier</a><br>
+                        Github <a class="live-link" href="https://github.com/minhazur9/premier">Link</a><br><br>
+                        Use this Login Info:</strong><br>username: guest <br>password: guest<br>
+                    </p>
+                    <img src="./styles/images/Premier.PNG" alt="Premier" class="projects-picture">
+                </h3>
+                <h3 class="projects-list-item">
+                    <p class="project-name">Wayfarer</p>
+                    <p class="projects-desc">A fullstack social media like application created by myself and three other
+                        developers
+                        in a week that allows users to create an account and post pictures of the sights and landmarks
+                        of
+                        the cities
+                        that they have traveled to share it with the world, and to also comment on other peoples posts.
+                        <br><br>
+                        Technologies used: <strong>Javascript, Python, Django, Jquery, PostgresSQL, CSS, HTML,
+                            Materialize.css</strong></br>
+                        Live: <a href="https://wayfarer-min.herokuapp.com/" class="live-link">Wayfarer</a><br>
+                        Github <a class="live-link" href="https://github.com/minhazur9/wayfarer">Link</a><br><br>
+                        Use this Login Info:</strong><br>email: guest123 <br>password: accountpass<br>
+                    </p>
+                    <img src="./styles/images/Wayfarer.PNG" alt="Wayfarer" class="projects-picture">
+                </h3>
+                <h3 class="projects-list-item">
+                    <p class="project-name">MusicScape</p>
+                    <p class="projects-desc">A fullstack application created by myself and another developer in a week
+                        that
+                        allows users to create playlists and add songs to them which automatically includes embedded
+                        music
+                        videos by using Genius API. A user can view other peoples playlists and songs and also create
+                        their
+                        own playlists by creating an account.<br><br>
+                        Technologies used: <strong>JavaScript, Jquery, HTML, CSS, Express.js, Bcrypt, MongoDB, and
+                            Genius
+                            API</strong><br>
+                        Live: <a href="https://fierce-bastion-27114.herokuapp.com/" class="live-link">MusicScape</a><br>
+                        Github <a class="live-link" href="https://github.com/minhazur9/MusicScape">Link</a><br><br>
+                        Use this Login Info:</strong><br>email: guest@gmail.com <br>password: guest<br>
 
-                </p>
-                <img src="./styles/images/MusicScape.PNG" alt="MusicScape" class="projects-picture">
+                    </p>
+                    <img src="./styles/images/MusicScape.PNG" alt="MusicScape" class="projects-picture">
 
-            </h3>
-            <h3 class="projects-list-item">
-                <p class="project-name">Tomagotchi Pokemon</p>
-                <p class="projects-desc">A browser game that requires skill and focus that needs players to help a pet
-                    survive until it morphs into its later stages in life. It records how many days your pet has
-                    survived and the clock will be ticking at all times<br><br>
-                    Technologies used: <strong>JavaScript, HTML, CSS</strong><br>
-                    Live: <a href="https://pages.git.generalassemb.ly/min/Project-0-Tamagotchi/"
-                        class="live-link">Tamagotchi Pokemon</a><br>
-                    Github <a class="live-link" href="https://github.com/minhazur9/Tamagatchi-Pokemon">Link</a>
-                </p>
-                <img src="./styles/images/Tomagotchi.PNG" alt="Tomagotchi Clone" class="projects-picture toga">
-            </h3>
-        </ul>
-    </div>
-    <!-- Contact -->
-    <div class="contact-container">
-        <div class="contact">
-            <h2 class="contact-title">Contact Me</h2>
-            <div class="icons">
-                <a href="mailto:minhazur190@gmail.com" class="envelope"><i class="fas fa-envelope"></i></a>
-                <a href="https://github.com/minhazur9" class="github"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/mindev22/" class="linkedIn"><i class="fab fa-linkedin"></i></a>
+                </h3>
+                <h3 class="projects-list-item">
+                    <p class="project-name">Tomagotchi Pokemon</p>
+                    <p class="projects-desc">A browser game that requires skill and focus that needs players to help a
+                        pet
+                        survive until it morphs into its later stages in life. It records how many days your pet has
+                        survived and the clock will be ticking at all times<br><br>
+                        Technologies used: <strong>JavaScript, HTML, CSS</strong><br>
+                        Live: <a href="https://pages.git.generalassemb.ly/min/Project-0-Tamagotchi/"
+                            class="live-link">Tamagotchi Pokemon</a><br>
+                        Github <a class="live-link" href="https://github.com/minhazur9/Tamagatchi-Pokemon">Link</a>
+                    </p>
+                    <img src="./styles/images/Tomagotchi.PNG" alt="Tomagotchi Clone" class="projects-picture toga">
+                </h3>
+            </ul>
+        </div>
+        <!-- Contact -->
+        <div class="contact-container">
+            <div class="contact">
+                <h2 class="contact-title">Contact Me</h2>
+                <div class="icons">
+                    <a href="mailto:minhazur190@gmail.com" class="envelope"><i class="fas fa-envelope"></i></a>
+                    <a href="https://github.com/minhazur9" class="github"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/mindev22/" class="linkedIn"><i class="fab fa-linkedin"></i></a>
+                </div>
             </div>
         </div>
     </div>
